# aoc

./: Cargo.toml
2018/clj/: CHANGELOG.md  README.md  project.clj
2018/clj/code/: eight.clj  eleven.clj  fifteen.clj  five.clj  foo.clj  fourteen.clj  nine.clj  seven.clj  six.clj  ten.clj  thirteen.clj  twelve.clj
2019/: Cargo.toml
2019/src/: computer.rs  day10a.rs  day10b.rs  day11.rs  day12a.rs  day12b.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day1a.rs  day1b.rs  day22.rs  day23.rs  day24.rs  day25.rs  day2a.rs  day2b.rs  day3a.rs  day3b.rs  day4a.rs  day4b.rs  day5.rs  day6a.rs  day6b.rs  day7a.rs  day7b.rs  day8a.rs  day8b.rs  day9.rs
2020/: build.gradle.kts  local.properties
2020/src/main/kotlin/: Day10Task1.kt  Day10Task2.kt  Day11Task1.kt  Day11Task2.kt  Day12Task1.kt  Day12Task2.kt  Day13Task1.kt  Day13Task2.kt  Day14Task1.kt  Day14Task2.kt  Day15Task1.kt  Day15Task2.kt  (+21 more)
2021/: Cargo.toml
2021/data/: input19.txt
2021/src/: day01.rs  day01a.rs  day01b.rs  day02.rs  day02a.rs  day02b.rs  day03.rs  day03a.rs  day03b.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs
2022/: Cargo.toml
2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs
2023/: .gitignore  Cargo.toml
2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  utils.rs
2024/: Package.swift
2024/Sources/day01/: main.swift
2024/Sources/day02/: main.swift
2024/Sources/day03/: main.swift
2024/Sources/day04/: main.swift
2024/Sources/day05/: main.swift
