[package]
name = "adventofcode2019"
version = "0.1.0"
authors = ["Pavel Sergeev <pavel.sergeev@jetbrains.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1a"
path = "src/day1a.rs"

[[bin]]
name = "day1b"
path = "src/day1b.rs"

[[bin]]
name = "day2a"
path = "src/day2a.rs"

[[bin]]
name = "day2b"
path = "src/day2b.rs"

[[bin]]
name = "day3a"
path = "src/day3a.rs"

[[bin]]
name = "day3b"
path = "src/day3b.rs"

[[bin]]
name = "day4a"
path = "src/day4a.rs"

[[bin]]
name = "day4b"
path = "src/day4b.rs"

[[bin]]
name = "day5"
path = "src/day5.rs"

[[bin]]
name = "day6a"
path = "src/day6a.rs"

[[bin]]
name = "day6b"
path = "src/day6b.rs"

[[bin]]
name = "day7a"
path = "src/day7a.rs"

[[bin]]
name = "day7b"
path = "src/day7b.rs"

[[bin]]
name = "day8a"
path = "src/day8a.rs"

[[bin]]
name = "day8b"
path = "src/day8b.rs"

[[bin]]
name = "day9"
path = "src/day9.rs"

[[bin]]
name = "day10a"
path = "src/day10a.rs"

[[bin]]
name = "day10b"
path = "src/day10b.rs"

[[bin]]
name = "day11"
path = "src/day11.rs"

[[bin]]
name = "day12a"
path = "src/day12a.rs"

[[bin]]
name = "day12b"
path = "src/day12b.rs"

[[bin]]
name = "day13"
path = "src/day13.rs"

[[bin]]
name = "day14"
path = "src/day14.rs"

[[bin]]
name = "day15"
path = "src/day15.rs"

[[bin]]
name = "day16"
path = "src/day16.rs"

[[bin]]
name = "day22"
path = "src/day22.rs"

[[bin]]
name = "day23"
path = "src/day23.rs"

[[bin]]
name = "day24"
path = "src/day24.rs"

[[bin]]
name = "day25"
path = "src/day25.rs"

[[bin]]
name = "day17"
path = "src/day17.rs"

[dependencies]
regex = "1.3.1"
termion = "1.5.2"
